Update sign-up navbar

--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -21,9 +21,9 @@
             </div>
             <div>
                 <ul class="nav-bar">
-                    <li class="nav-link "><a href="./pages/sign-up.html" class="nav-link-text">Sign in</a></li>
+                    <li class="nav-link "><a href="../index.html" class="nav-link-text">Home</a></li>
                     <li class="nav-link "><a href="../index.html" class="nav-link-text">Pricing</a></li>
-                    <li class="nav-link "><a href="#cta" class="nav-link-text">Download</a></li>
+                    <li class="nav-link "><a href="./pages/sign-up.html" class="nav-link-text">Sign in</a></li>
                 </ul>
             </div>
         </nav>
