blog page & css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 </head>
 
 <body>
-
   <header>
     <nav class="nav">
       <div class="logo-container">
@@ -24,7 +23,7 @@
         <ul class="nav-bar">
           <li class="nav-link"><a href="./pages/sign-up.html" class="nav-link-text">Sign up</a></li>
           <li class="nav-link"><a href="#pricing" class="nav-link-text">Pricing</a></li>
-          <li class="nav-link"><a href="#cta" class="nav-link-text">Download</a></li>
+          <li class="nav-link"><a href="./pages/blog.html" class="nav-link-text">Blog</a></li>
         </ul>
       </div>
     </nav>
@@ -33,7 +32,9 @@
         <h1 class="hero-text">Meet new and interesting cats nearby.</h1>
         <p class="sub-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non earum possimus laudantium qui,
           soluta nostrum ipsum unde, at eos optio, dolores perspiciatis!</p>
-        <a href="./pages/sign-up.html" class="btn-text"><button type="button" class="btn-cta">Sign up</button></a>
+        <a href="./pages/sign-up.html" class="btn-text">
+          <button type="button" class="btn-cta">Sign up</button>
+        </a>
       </div>
       <div class="hero-img-container">
         <img src="images/mobile-cat.jpg" alt="iphone mockup with cat" class="hero-img">
