--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -22,12 +22,11 @@
             <div>
                 <ul class="nav-bar">
                     <li class="nav-link "><a href="../index.html" class="nav-link-text">Home</a></li>
-                    <li class="nav-link "><a href="../index.html" class="nav-link-text">Pricing</a></li>
-                    <li class="nav-link "><a href="./pages/sign-up.html" class="nav-link-text">Sign in</a></li>
+                    <li class="nav-link "><a href="#" class="nav-link-text">Sign in</a></li>
+                    <li class="nav-link "><a href="./blog.html" class="nav-link-text">Blog</a></li>
                 </ul>
             </div>
         </nav>
-
     </header>
     <main>
         <div class="signup-container">
