--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <h1 class="hero-text">Meet new and interesting cats nearby.</h1>
         <p class="sub-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non earum possimus laudantium qui,
           soluta nostrum ipsum unde, at eos optio, dolores perspiciatis!</p>
-        <a href="./pages/sign-up.html" class="btn-text">
-          <button type="button" class="btn-cta">Sign up</button>
+        <a href="./pages/sign-up.html">
+          <button type="button" class="btn-cta btn-text">Sign up</button>
         </a>
       </div>
       <div class="hero-img-container">
