landscape responsive fixed

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="blog-body">
-    <header>
+    <header class="blog-header">
         <nav class="nav">
             <div class="logo-container">
                 <a href="../index.html" class="logo-img">
