--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TinCat</title>
   <link rel="stylesheet" type="text/css" href="css/manifest.css">
-  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
   <script src="https://kit.fontawesome.com/35d01a1b9d.js" crossorigin="anonymous"></script>
 </head>
 
