--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="signup-body">
-    <header>
+    <header class="signup-header">
         <nav class="nav">
             <div class="logo-container">
                 <a href="../index.html" class="logo-img">
