Update blog.html link to li tag

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -61,16 +61,16 @@
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
                 <ul>
-                    <li>Why Should You Have a Dog DNA Test Kit? The Ultimate Guide</li>
-                    <li>The Black German Shorthaired Pointer: A Versatile and Striking Hunting Companion</li>
-                    <li>Dog Grooming Jobs Near Me: Salary, Qualifications, and Career</li>
-                    <li>Dogs Help Us Feel Content and Complete in 5 Incredible Ways</li>
-                    <li>Tips for Finding the Perfect Vet for Your Pet</li>
-                    <li>Why Should You Have a Dog DNA Test Kit? The Ultimate Guide</li>
-                    <li>The Black German Shorthaired Pointer: A Versatile and Striking Hunting Companion</li>
-                    <li>Dog Grooming Jobs Near Me: Salary, Qualifications, and Career</li>
-                    <li>Dogs Help Us Feel Content and Complete in 5 Incredible Ways</li>
-                    <li>Tips for Finding the Perfect Vet for Your Pet</li>
+                    <li><a href='#'>Why Should You Have a Dog DNA Test Kit? The Ultimate Guide<a></li>
+                        <li><a href='#'>The Black German Shorthaired Pointer: A Versatile and Striking Hunting Companion<a></li>
+                    <li><a href='#'>Dog Grooming Jobs Near Me: Salary, Qualifications, and Career<a></li>
+                    <li><a href='#'>Dogs Help Us Feel Content and Complete in 5 Incredible Ways<a></li>
+                    <li><a href='#'>Tips for Finding the Perfect Vet for Your Pet<a></li>
+                    <li><a href='#'>Why Should You Have a Dog DNA Test Kit? The Ultimate Guide<a></li>
+                    <li><a href='#'>The Black German Shorthaired Pointer: A Versatile and Striking Hunting Companion<a></li>
+                    <li><a href='#'>Dog Grooming Jobs Near Me: Salary, Qualifications, and Career<a></li>
+                    <li><a href='#'>Dogs Help Us Feel Content and Complete in 5 Incredible Ways<a></li>
+                    <li><a href='#'>Tips for Finding the Perfect Vet for Your Pet<a></li>
                 </ul>
             </aside>
         </div>
