--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <h2 class="info-header-text">A Plan for Every Cat's Needs</h2>
           <p class="sub-text">Simple and affordable price plans for your and your cat.</p>
         </div>
-        <div class="card-group  card-text">
+        <div class="card-group">
           <div class="card-item">
             <figure class="card-img-container">
               <img src="./images/silvershorthair.jpg" alt="American Shorthair Cats" class="card-img" />
@@ -98,8 +98,8 @@
     <!-- Testimonial -->
     <section id="testimonial ">
       <div class="testimonial-container">
-        <q class="testimonial-text">I no longer have to run out for love. I've found the hottest Corgi on TinCat.
-          Miau...</q>
+        <q class="testimonial-text"><i>I no longer have to run out for love. I've found the hottest Corgi on TinCat.
+          Miau...</i></q>
         <p class="author"><em>Mimi, Paris</em></p>
       </div>
     </section>
