--- a/pages/blog.html
+++ b/pages/blog.html
@@ -33,26 +33,45 @@
         <div class='container'>
             <div class="blog-container">
                 <section class='blog-header'>
-                    <h1>Best Cat Trees for Large Cats in 2020: Buying Guide</h1>
-                    <img src='../images/blog-cat.webp' alt='cats on cat tree' />
+                    <h1 class="blog-title">Best Cat Trees for Large Cats in 2020: Buying Guide</h1>
+                    <div class="blog-img-container"><img src='../images/blog-cat.webp' alt='cats on cat tree' class="blog-img"/></div>
                 </section>
                 <article class='blog-text'>
                     All cats enjoy sleeping above the ground level, scratching, and climbing.
-
                     However, you may find it challenging to find the right model for your furry friend if it is too
                     large.
-
                     These creatures need a stable and reliable product, so most cheap, poor-quality ones you can find on
                     the
                     market nowadays won’t fit at all.
-
                     Your large pet deserves a strong and robust cat tower that can stand its jumping and climbing for
-                    cat.
-
+                    cat.<br/>
                     You should pick out the adequate model depending on the number of kitties you keep in your home and
                     their sizes.
-
-                    So, let’s find 7 best cat trees for large cats in 2020.
+                    So, let’s find 7 best cat trees for large cats in 2020.<br/>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laboriosam mollitia at, facilis
+                    aut maxime minus! Eius accusamus id rerum in, nihil illo aperiam ratione blanditiis atque
+                    temporibus, fuga modi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laboriosam mollitia at, facilis
+                    aut maxime minus! Eius accusamus id rerum in, nihil illo aperiam ratione blanditiis atque
+                    temporibus, fuga modi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laboriosam mollitia at, facilis
+                    aut maxime minus! Eius accusamus id rerum in, nihil illo aperiam ratione blanditiis atque
+                    temporibus, fuga modi.<br/>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laboriosam mollitia at, facilis
+                    aut maxime minus! Eius accusamus id rerum in, nihil illo aperiam ratione blanditiis atque
+                    temporibus, fuga modi.<br/>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laboriosam mollitia at, facilis
+                    aut maxime minus! Eius accusamus id rerum in, nihil illo aperiam ratione blanditiis atque
+                    temporibus, fuga modi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laboriosam mollitia at, facilis
+                    aut maxime minus! Eius accusamus id rerum in, nihil illo aperiam ratione blanditiis atque
+                    temporibus, fuga modi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laboriosam mollitia at, facilis
+                    aut maxime minus! Eius accusamus id rerum in, nihil illo aperiam ratione blanditiis atque
+                    temporibus, fuga modi.<br/>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laboriosam mollitia at, facilis
+                    aut maxime minus! Eius accusamus id rerum in, nihil illo aperiam ratione blanditiis atque
+                    temporibus, fuga modi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laboriosam mollitia at, facilis
+                    aut maxime minus! Eius accusamus id rerum in, nihil illo aperiam ratione blanditiis atque
+                    temporibus, fuga modi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laboriosam mollitia at, facilis
+                    aut maxime minus! Eius accusamus id rerum in, nihil illo aperiam ratione blanditiis atque
+                    temporibus, fuga modi.<br/>
                 </article>
             </div>
             <aside class='side-bar'>
@@ -61,16 +80,17 @@
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
                 <ul>
-                    <li><a href='#'>Why Should You Have a Dog DNA Test Kit? The Ultimate Guide<a></li>
-                        <li><a href='#'>The Black German Shorthaired Pointer: A Versatile and Striking Hunting Companion<a></li>
-                    <li><a href='#'>Dog Grooming Jobs Near Me: Salary, Qualifications, and Career<a></li>
-                    <li><a href='#'>Dogs Help Us Feel Content and Complete in 5 Incredible Ways<a></li>
-                    <li><a href='#'>Tips for Finding the Perfect Vet for Your Pet<a></li>
-                    <li><a href='#'>Why Should You Have a Dog DNA Test Kit? The Ultimate Guide<a></li>
-                    <li><a href='#'>The Black German Shorthaired Pointer: A Versatile and Striking Hunting Companion<a></li>
-                    <li><a href='#'>Dog Grooming Jobs Near Me: Salary, Qualifications, and Career<a></li>
-                    <li><a href='#'>Dogs Help Us Feel Content and Complete in 5 Incredible Ways<a></li>
-                    <li><a href='#'>Tips for Finding the Perfect Vet for Your Pet<a></li>
+                    <li class="featured-link"><a href='#' class="featured-link-text">Why Should You Have a Dog DNA Test Kit? The Ultimate Guide<a></li>
+                    <li class="featured-link"><a href='#' class="featured-link-text">The Black German Shorthaired Pointer: A Versatile and Striking Hunting Companion<a></li>
+                    <li class="featured-link"><a href='#' class="featured-link-text">Dog Grooming Jobs Near Me: Salary, Qualifications, and Career<a></li>
+                    <li class="featured-link"><a href='#' class="featured-link-text">Dogs Help Us Feel Content and Complete in 5 Incredible Ways<a></li>
+                    <li class="featured-link"><a href='#' class="featured-link-text">Tips for Finding the Perfect Vet for Your Pet<a></li>
+                    <li class="featured-link"><a href='#' class="featured-link-text">Why Should You Have a Dog DNA Test Kit? The Ultimate Guide<a></li>
+                    <li class="featured-link"><a href='#' class="featured-link-text">The Black German Shorthaired Pointer: A Versatile and Striking Hunting Companion<a>
+                    </li>
+                    <li class="featured-link"><a href='#' class="featured-link-text">Dog Grooming Jobs Near Me: Salary, Qualifications, and Career<a></li>
+                    <li class="featured-link"><a href='#' class="featured-link-text">Dogs Help Us Feel Content and Complete in 5 Incredible Ways<a></li>
+                    <li class="featured-link"><a href='#' class="featured-link-text">Tips for Finding the Perfect Vet for Your Pet<a></li>
                 </ul>
             </aside>
         </div>
