--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="plan">
         <div class="plan-title">
           <h2 class="info-header-text">A Plan for Every Cat's Needs</h2>
-          <p class="sub-text">Simple and affordable price plans for your and your cat.</p>
+          <p>Simple and affordable price plans for your and your cat.</p>
         </div>
         <div class="card-group">
           <div class="card-item">
