--- a/pages/blog.html
+++ b/pages/blog.html
@@ -112,7 +112,7 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-        <p>© Copyright TinCat 2023</p>
+        <p class="sub-text">© Copyright TinCat 2023</p>
     </footer>
 </body>
 </body>
