universal bg color

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -11,7 +11,7 @@
     <script src="https://kit.fontawesome.com/35d01a1b9d.js" crossorigin="anonymous"></script>
 </head>
 
-<body class="blog-body">
+<body>
     <header class="blog-header">
         <nav class="nav">
             <div class="logo-container">
@@ -34,7 +34,8 @@
             <div class="blog-container">
                 <section class='blog-header'>
                     <h1 class="blog-title">Best Cat Trees for Large Cats in 2020: Buying Guide</h1>
-                    <div class="blog-img-container"><img src='../images/blog-cat.webp' alt='cats on cat tree' class="blog-img"/></div>
+                    <div class="blog-img-container"><img src='../images/blog-cat.webp' alt='cats on cat tree'
+                            class="blog-img" /></div>
                 </section>
                 <article class='blog-text'>
                     All cats enjoy sleeping above the ground level, scratching, and climbing.
@@ -44,34 +45,40 @@
                     the
                     market nowadays won’t fit at all.
                     Your large pet deserves a strong and robust cat tower that can stand its jumping and climbing for
-                    cat.<br/>
+                    cat.<br />
                     You should pick out the adequate model depending on the number of kitties you keep in your home and
                     their sizes.
-                    So, let’s find 7 best cat trees for large cats in 2020.<br/>
+                    So, let’s find 7 best cat trees for large cats in 2020.<br />
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laboriosam mollitia at, facilis
                     aut maxime minus! Eius accusamus id rerum in, nihil illo aperiam ratione blanditiis atque
-                    temporibus, fuga modi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laboriosam mollitia at, facilis
+                    temporibus, fuga modi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
+                    laboriosam mollitia at, facilis
                     aut maxime minus! Eius accusamus id rerum in, nihil illo aperiam ratione blanditiis atque
-                    temporibus, fuga modi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laboriosam mollitia at, facilis
+                    temporibus, fuga modi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
+                    laboriosam mollitia at, facilis
                     aut maxime minus! Eius accusamus id rerum in, nihil illo aperiam ratione blanditiis atque
-                    temporibus, fuga modi.<br/>
+                    temporibus, fuga modi.<br />
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laboriosam mollitia at, facilis
                     aut maxime minus! Eius accusamus id rerum in, nihil illo aperiam ratione blanditiis atque
-                    temporibus, fuga modi.<br/>
+                    temporibus, fuga modi.<br />
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laboriosam mollitia at, facilis
                     aut maxime minus! Eius accusamus id rerum in, nihil illo aperiam ratione blanditiis atque
-                    temporibus, fuga modi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laboriosam mollitia at, facilis
+                    temporibus, fuga modi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
+                    laboriosam mollitia at, facilis
                     aut maxime minus! Eius accusamus id rerum in, nihil illo aperiam ratione blanditiis atque
-                    temporibus, fuga modi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laboriosam mollitia at, facilis
+                    temporibus, fuga modi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
+                    laboriosam mollitia at, facilis
                     aut maxime minus! Eius accusamus id rerum in, nihil illo aperiam ratione blanditiis atque
-                    temporibus, fuga modi.<br/>
+                    temporibus, fuga modi.<br />
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laboriosam mollitia at, facilis
                     aut maxime minus! Eius accusamus id rerum in, nihil illo aperiam ratione blanditiis atque
-                    temporibus, fuga modi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laboriosam mollitia at, facilis
+                    temporibus, fuga modi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
+                    laboriosam mollitia at, facilis
                     aut maxime minus! Eius accusamus id rerum in, nihil illo aperiam ratione blanditiis atque
-                    temporibus, fuga modi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laboriosam mollitia at, facilis
+                    temporibus, fuga modi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
+                    laboriosam mollitia at, facilis
                     aut maxime minus! Eius accusamus id rerum in, nihil illo aperiam ratione blanditiis atque
-                    temporibus, fuga modi.<br/>
+                    temporibus, fuga modi.<br />
                 </article>
             </div>
             <aside class='side-bar'>
@@ -80,17 +87,27 @@
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
                 <ul>
-                    <li class="featured-link"><a href='#' class="featured-link-text">Why Should You Have a Dog DNA Test Kit? The Ultimate Guide<a></li>
-                    <li class="featured-link"><a href='#' class="featured-link-text">The Black German Shorthaired Pointer: A Versatile and Striking Hunting Companion<a></li>
-                    <li class="featured-link"><a href='#' class="featured-link-text">Dog Grooming Jobs Near Me: Salary, Qualifications, and Career<a></li>
-                    <li class="featured-link"><a href='#' class="featured-link-text">Dogs Help Us Feel Content and Complete in 5 Incredible Ways<a></li>
-                    <li class="featured-link"><a href='#' class="featured-link-text">Tips for Finding the Perfect Vet for Your Pet<a></li>
-                    <li class="featured-link"><a href='#' class="featured-link-text">Why Should You Have a Dog DNA Test Kit? The Ultimate Guide<a></li>
-                    <li class="featured-link"><a href='#' class="featured-link-text">The Black German Shorthaired Pointer: A Versatile and Striking Hunting Companion<a>
+                    <li class="featured-link"><a href='#' class="featured-link-text">Why Should You Have a Dog DNA Test
+                            Kit? The Ultimate Guide<a></li>
+                    <li class="featured-link"><a href='#' class="featured-link-text">The Black German Shorthaired
+                            Pointer: A Versatile and Striking Hunting Companion<a></li>
+                    <li class="featured-link"><a href='#' class="featured-link-text">Dog Grooming Jobs Near Me: Salary,
+                            Qualifications, and Career<a></li>
+                    <li class="featured-link"><a href='#' class="featured-link-text">Dogs Help Us Feel Content and
+                            Complete in 5 Incredible Ways<a></li>
+                    <li class="featured-link"><a href='#' class="featured-link-text">Tips for Finding the Perfect Vet
+                            for Your Pet<a></li>
+                    <li class="featured-link"><a href='#' class="featured-link-text">Why Should You Have a Dog DNA Test
+                            Kit? The Ultimate Guide<a></li>
+                    <li class="featured-link"><a href='#' class="featured-link-text">The Black German Shorthaired
+                            Pointer: A Versatile and Striking Hunting Companion<a>
                     </li>
-                    <li class="featured-link"><a href='#' class="featured-link-text">Dog Grooming Jobs Near Me: Salary, Qualifications, and Career<a></li>
-                    <li class="featured-link"><a href='#' class="featured-link-text">Dogs Help Us Feel Content and Complete in 5 Incredible Ways<a></li>
-                    <li class="featured-link"><a href='#' class="featured-link-text">Tips for Finding the Perfect Vet for Your Pet<a></li>
+                    <li class="featured-link"><a href='#' class="featured-link-text">Dog Grooming Jobs Near Me: Salary,
+                            Qualifications, and Career<a></li>
+                    <li class="featured-link"><a href='#' class="featured-link-text">Dogs Help Us Feel Content and
+                            Complete in 5 Incredible Ways<a></li>
+                    <li class="featured-link"><a href='#' class="featured-link-text">Tips for Finding the Perfect Vet
+                            for Your Pet<a></li>
                 </ul>
             </aside>
         </div>
