--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <body>
   <header>
     <nav class="nav">
-      <div class="logo-container">
+      <picture class="logo-container">
         <a href="index.html" class="logo-img">
           <img src="./images/tincat_logo_transparent.png" alt="tincat logo" class="logo-img" />
         </a>
-      </div>
+      </picture>
       <div>
         <ul class="nav-bar">
           <li class="nav-link"><a href="./pages/sign-up.html" class="nav-link-text">Sign up</a></li>
@@ -36,9 +36,9 @@
           <button type="button" class="btn-cta btn-text">Sign up</button>
         </a>
       </div>
-      <div class="hero-img-container">
+      <picture class="hero-img-container">
         <img src="images/mobile-cat.jpg" alt="iphone mockup with cat" class="hero-img">
-      </div>
+      </picture>
     </div>
   </header>
 
