--- a/pages/blog.html
+++ b/pages/blog.html
@@ -120,10 +120,9 @@
                     <p class="cta-hero-sub-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
                 <div class="cta-button-group"></div>
-                <button type="button" class="btn-cta-outline btn-text"><i class="fa-brands fa-apple"></i>
-                    Download</button>
-                <button type="button" class="btn-cta-outline btn-text"><i class="fa-brands fa-google-play"></i>
-                    Download</button>
+                <a href="./pages/sign-up.html">
+                    <button type="button" class="btn-cta-outline btn-text">Sign up</button>
+                </a>
             </div>
         </section>
     </main>
