--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="signup-body">
-    <header class="signup-header">
+    <header>
         <nav class="nav">
             <div class="logo-container">
                 <a href="../index.html" class="logo-img">
@@ -40,24 +40,7 @@
                     <span>Already registed? </span><a href="#">Login here</a>
                 </div>
             </div>
-            <!-- <div class="hero-img-container-signup">
-                <img src="../images/cat-img.jpg" alt="iphone mockup with cat" class="hero-img">
-            </div> -->
         </div>
-        <!-- Call to Action -->
-        <section id="cta">
-            <div class="cta-container">
-                <div class="cta-text-container">
-                    <h3 class="cta-hero-text">Find the True Love of Your Cat's Life Today.</h3>
-                    <p class="cta-hero-sub-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </div>
-                <div class="cta-button-group"></div>
-                <button type="button" class="btn-cta-outline btn-text"><i class="fa-brands fa-apple"></i>
-                    Download</button>
-                <button type="button" class="btn-cta-outline btn-text"><i class="fa-brands fa-google-play"></i>
-                    Download</button>
-            </div>
-        </section>
     </main>
     <!-- Footer -->
     <footer class="footer">
