--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         </ul>
       </div>
     </nav>
+  </header>
+
+  <main>
+    <!-- hero  -->
     <div class="hero-container">
       <div class="hero-text-container">
         <h1 class="hero-text">Meet new and interesting cats nearby.</h1>
@@ -40,57 +44,60 @@
         <img src="images/mobile-cat.jpg" alt="iphone mockup with cat" class="hero-img">
       </picture>
     </div>
-  </header>
-
-  <main>
     <!-- Pricing -->
     <section id="pricing" class="plan-container">
-      <div class="plan">
-        <div class="plan-title">
-          <h2 class="info-header-text">A Plan for Every Cat's Needs</h2>
-          <p>Simple and affordable price plans for your and your cat.</p>
+      <div class="plan-title">
+        <h2 class="info-header-text">A Plan for Every Cat's Needs</h2>
+        <p>Simple and affordable price plans for your and your cat.</p>
+      </div>
+      <div class="card-group">
+        <div class="card-item">
+          <figure class="card-img-container">
+            <img src="./images/silvershorthair.jpg" alt="American Shorthair Cats" class="card-img" />
+            <figcaption>
+              <p class="card-title">Shorthair Cats</p>
+              <h2>Free</h2>
+              <p>5 Matches Per Day</p>
+              <p>10 Messages Per Day</p>
+              <p>Unlimited App Usage</p>
+            </figcaption>
+          </figure>
         </div>
-        <div class="card-group">
-          <div class="card-item">
-            <figure class="card-img-container">
-              <img src="./images/silvershorthair.jpg" alt="American Shorthair Cats" class="card-img" />
-            </figure>
-            <figcaption class="card-title">Shorthair Cats</figcaption>
-            <h2>Free</h2>
-            <p>5 Matches Per Day</p>
-            <p>10 Messages Per Day</p>
-            <p>Unlimited App Usage</p>
-          </div>
-          <div class="card-item">
-            <figure class="card-img-container">
-              <img src="./images/mainecoon.jpeg" alt="Maine Coon Cats" class="card-img" />
-            </figure>
-            <figcaption class="card-title">Maine Coon Cats</figcaption>
-            <h2>€49 / mo</h2>
-            <p>Unlimited Matches</p>
-            <p>Unlimited Matches</p>
-            <p>Unlimited Matches</p>
-          </div>
-          <div class="card-item">
-            <figure class="card-img-container">
-              <img src="./images/BritishShorthairBlue.jpeg" alt="British Shorthair" class="card-img" />
-            </figure>
-            <figcaption class="card-title">British Shorthair</figcaption>
-            <h2>€69 / mo</h2>
-            <p>Unlimited Matches</p>
-            <p>Unlimited Matches</p>
-            <p>Unlimited Matches</p>
-          </div>
-          <div class="card-item">
-            <figure class="card-img-container">
-              <img src="./images/174abyssinianlayingdown.jpeg" alt="Abyssinian Cats" class="card-img" />
-            </figure>
-            <figcaption class="card-title">Abyssinian Cats</figcaption>
-            <h2>€99 / mo</h2>
-            <p>Unlimited Matches</p>
-            <p>Unlimited Matches</p>
-            <p>Unlimited Matches</p>
-          </div>
+        <div class="card-item">
+          <figure class="card-img-container">
+            <img src="./images/mainecoon.jpeg" alt="Maine Coon Cats" class="card-img" />
+            <figcaption>
+              <p class="card-title">Maine Coon Cats</p>
+              <h2>€49 / mo</h2>
+              <p>Unlimited Matches</p>
+              <p>Unlimited Matches</p>
+              <p>Unlimited Matches</p>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="card-item">
+          <figure class="card-img-container">
+            <img src="./images/BritishShorthairBlue.jpeg" alt="British Shorthair" class="card-img" />
+            <figcaption>
+              <p class="card-title">British Shorthair</p>
+              <h2>€69 / mo</h2>
+              <p>Unlimited Matches</p>
+              <p>Unlimited Matches</p>
+              <p>Unlimited Matches</p>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="card-item">
+          <figure class="card-img-container">
+            <img src="./images/174abyssinianlayingdown.jpeg" alt="Abyssinian Cats" class="card-img" />
+            <figcaption>
+              <p class="card-title">Abyssinian Cats</p>
+              <h2>€99 / mo</h2>
+              <p>Unlimited Matches</p>
+              <p>Unlimited Matches</p>
+              <p>Unlimited Matches</p>
+            </figcaption>
+          </figure>
         </div>
       </div>
     </section>
@@ -112,10 +119,9 @@
           <p class="cta-hero-sub-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="cta-button-group"></div>
-        <button type="button" class="btn-cta-outline btn-text"><i class="fa-brands fa-apple"></i>
-          Download</button>
-        <button type="button" class="btn-cta-outline btn-text"><i class="fa-brands fa-google-play"></i>
-          Download</button>
+        <a href="./pages/sign-up.html">
+          <button type="button" class="btn-cta-outline btn-text">Sign up</button>
+        </a>
       </div>
     </section>
   </main>
