--- a/pages/blog.html
+++ b/pages/blog.html
@@ -34,8 +34,13 @@
             <div class="blog-container">
                 <section class='blog-header'>
                     <h1 class="blog-title">Best Cat Trees for Large Cats in 2020: Buying Guide</h1>
-                    <div class="blog-img-container"><img src='../images/blog-cat.webp' alt='cats on cat tree'
-                            class="blog-img" /></div>
+                    <div class="blog-img-container">
+                        <img 
+                             src='../images/blog-cat.webp' 
+                             alt='cats on cat tree'
+                             class="blog-img" 
+                        />
+                    </div>
                 </section>
                 <article class='blog-text'>
                     All cats enjoy sleeping above the ground level, scratching, and climbing.
@@ -45,10 +50,10 @@
                     the
                     market nowadays won’t fit at all.
                     Your large pet deserves a strong and robust cat tower that can stand its jumping and climbing for
-                    cat.<br />
+                    cat.<br>
                     You should pick out the adequate model depending on the number of kitties you keep in your home and
                     their sizes.
-                    So, let’s find 7 best cat trees for large cats in 2020.<br />
+                    So, let’s find 7 best cat trees for large cats in 2020.<br>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laboriosam mollitia at, facilis
                     aut maxime minus! Eius accusamus id rerum in, nihil illo aperiam ratione blanditiis atque
                     temporibus, fuga modi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
@@ -57,19 +62,10 @@
                     temporibus, fuga modi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
                     laboriosam mollitia at, facilis
                     aut maxime minus! Eius accusamus id rerum in, nihil illo aperiam ratione blanditiis atque
-                    temporibus, fuga modi.<br />
+                    temporibus, fuga modi.<br>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laboriosam mollitia at, facilis
                     aut maxime minus! Eius accusamus id rerum in, nihil illo aperiam ratione blanditiis atque
-                    temporibus, fuga modi.<br />
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laboriosam mollitia at, facilis
-                    aut maxime minus! Eius accusamus id rerum in, nihil illo aperiam ratione blanditiis atque
-                    temporibus, fuga modi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
-                    laboriosam mollitia at, facilis
-                    aut maxime minus! Eius accusamus id rerum in, nihil illo aperiam ratione blanditiis atque
-                    temporibus, fuga modi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
-                    laboriosam mollitia at, facilis
-                    aut maxime minus! Eius accusamus id rerum in, nihil illo aperiam ratione blanditiis atque
-                    temporibus, fuga modi.<br />
+                    temporibus, fuga modi.<br>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laboriosam mollitia at, facilis
                     aut maxime minus! Eius accusamus id rerum in, nihil illo aperiam ratione blanditiis atque
                     temporibus, fuga modi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
@@ -78,7 +74,16 @@
                     temporibus, fuga modi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
                     laboriosam mollitia at, facilis
                     aut maxime minus! Eius accusamus id rerum in, nihil illo aperiam ratione blanditiis atque
-                    temporibus, fuga modi.<br />
+                    temporibus, fuga modi.<br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laboriosam mollitia at, facilis
+                    aut maxime minus! Eius accusamus id rerum in, nihil illo aperiam ratione blanditiis atque
+                    temporibus, fuga modi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
+                    laboriosam mollitia at, facilis
+                    aut maxime minus! Eius accusamus id rerum in, nihil illo aperiam ratione blanditiis atque
+                    temporibus, fuga modi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
+                    laboriosam mollitia at, facilis
+                    aut maxime minus! Eius accusamus id rerum in, nihil illo aperiam ratione blanditiis atque
+                    temporibus, fuga modi.<br>
                 </article>
             </div>
             <aside class='side-bar'>
