--- a/pages/blog.html
+++ b/pages/blog.html
@@ -35,11 +35,7 @@
                 <section class='blog-header'>
                     <h1 class="blog-title">Best Cat Trees for Large Cats in 2020: Buying Guide</h1>
                     <div class="blog-img-container">
-                        <img 
-                             src='../images/blog-cat.webp' 
-                             alt='cats on cat tree'
-                             class="blog-img" 
-                        />
+                        <img src='../images/blog-cat.webp' alt='cats on cat tree' class="blog-img" />
                     </div>
                 </section>
                 <article class='blog-text'>
@@ -125,7 +121,7 @@
                     <p class="cta-hero-sub-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
                 <div class="cta-button-group"></div>
-                <a href="./pages/sign-up.html">
+                <a href="../pages/sign-up.html">
                     <button type="button" class="btn-cta-outline btn-text">Sign up</button>
                 </a>
             </div>
